# porespy

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .test_durations  .travis.yml  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FM_model_Gravity_2.0.py  LICENSE  MANIFEST.in  MIO_IP_V8_leveraging_mio.py  MIO_IP_V9_no_mio.py  README.md  README.rst  REV.py  VERSIONING.md  __gravity_mio__.py  basic_usage.html  codecov.yml  conda_requirements.txt  conftest.py  example.py  example_Bo_study.py  example_export_sphere_pack_to_comsol.py  example_ibip.py  example_image_to_openfoam.py  example_openfoam_export.py  example_rw.py  example_script.py  example_snow.py  example_with_gravity.py  examples.html  examples.py  genindex.html  getting_started.html  gravity_mio_script.py  (+23 more)
.github/workflows/: bump-version-dev.yml  bump-version.yml  ci-macos.yml  ci-min.yml  ci-ubuntu.yml  ci-windows.yml  ci.yml  cleanup-tags.yml  examples.yml  gh-pages.yml  logger.sh  production.yml  publish-to-pypi.yml  release-notes.yml  ruff.yml  test-duration-logger.yml  tests.yml  utils.sh  verify-pip-installation.yml
_examples/: index.html
_examples/filters/: index.html  reference.html  tutorials.html
_examples/general/: index.html
_examples/generators/: index.html  reference.html  tutorials.html
_examples/metrics/: index.html  reference.html  tutorials.html
_examples/networks/: index.html  reference.html  tutorials.html
_examples/simulations/: index.html  tutorials.html
_examples/tools/: index.html  reference.html
_examples/visualization/: index.html  reference.html  tutorials.html
_modules/: index.html
_sources/: basic_usage.rst.txt  getting_started.rst.txt  index.rst.txt
_sources/_examples/: index.rst.txt
_sources/examples/: Untitled.nblink.txt
_sources/modules/: dns.rst.txt  networks.rst.txt
_sources/user_guide/: basic_usage.rst.txt  installation.rst.txt
_static/css/: custom.css
_static/js/: custom.js
docs/: Makefile  basic_usage.rst  blog.md  conf.py  docPoreSpy.rst  examples.rst  getting_started.rst  index.rst  installation.rst  make.bat  user_guide.rst
docs/_examples/: index.rst
docs/blog/: jul172023.md
docs/modules/: dns.rst  filters.rst  generators.rst  index.rst  io.rst  metrics.rst  network_extraction.rst  networks.rst  simulations.rst  tools.rst  visualization.rst
docs/source/: conf.py  index.rst
docs/user_guide/: index.rst  installation.rst
etc/: porespy.yml
examples/: README.md  Untitled.html  Untitled.ipynb
examples/filters/: README.md  adding_chords.html  adding_chords.ipynb  apply_chords.html  apply_chords.ipynb  apply_chords_3D.html  apply_chords_3D.ipynb  apply_padded.html  apply_padded.ipynb  chunked_func.html  chunked_func.ipynb  distance_transform_lin.html  distance_transform_lin.ipynb  fill_blind_pores.html  fill_blind_pores.ipynb  find_disconnected_voxels.html  find_disconnected_voxels.ipynb  find_dt_artifacts.html  find_dt_artifacts.ipynb  find_peaks.html  find_peaks.ipynb  flood.html  flood.ipynb  hold_peaks.html  hold_peaks.ipynb  local_thickness.html  local_thickness.ipynb  porosimetry.html  (+33 more)
filters/: apply_chords_3D.ipynb  chunked_func.ipynb  flood.ipynb  prune_branches.ipynb  region_size.ipynb  snow_partitioning_n.ipynb  trim_nearby_peaks.ipynb  trim_small_clusters.ipynb
generators/: cylinders.ipynb  overlapping_spheres.ipynb  perlin_noise.ipynb  polydisperse_spheres.ipynb  voronoi_edges.ipynb
metrics/: linear_density.ipynb  region_interface_areas.ipynb  regionprops_3d.ipynb  two_point_correlation_bf.ipynb
modules/: dns.html  filters.html  generators.html  index.html  io.html  metrics.html  networks.html  simulations.html  tools.html  visualization.html
porespy/: __BaseClass__.py  __cld__.py  __imgen__.py  __imio__.py  __init__.py  __main__.py  __mio__.py  __psf__.py  __rev__.py  __tpc__.py  __version__.py  __vis__.py  _version.py
requirements/: .condarc  conda.txt  conda_requirements.txt  doc_requirements.txt  docs.txt  environment.yml  examples.txt  min_requirements_pip.txt  optional_requirements.txt  pip_requirements.txt  pypi_requirements.txt  tensorflow_requirements.txt  test_requirements.txt  tests.txt
scripts/: using_MIO.py
test/: TestPackage.py  package.py  test_package.py
tools/: align_image_with_openpnm.ipynb  extract_cylinder.ipynb  extract_subsection.ipynb  fftmorphology.ipynb  norm_to_uniform.ipynb  zero_corners.ipynb
user_guide/: basic_usage.html  index.html  installation.html
(+1359 files in other folders)
