[bumpversion]
current_version = 2.2.2.dev4
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\.(?P<release>\D+)(?P<build>\d+)?
serialize = {major}.{minor}.{patch}.{release}{build}

[bumpversion:part:release]
values = dev

[flake8]
ignore = E122,E127,E203,E222,E226,E225,E241,E402,W503,W504,F401
max-line-length = 90

[pycodestyle]
ignore = E122,E127,E203,E222,E226,E225,E241,E402,E703,W503,W504,F401
max-line-length = 90

[pep8]
ignore = E122,E127,E203,E222,E226,E225,E241,E402,W503,W504,F401
max-line-length = 90

[pep8_pre_commit_hook]
max-violations-per-file = 0

[options]
python_requires = >= 3.8

[metadata]
license_file = LICENSE
